--- a/app/assets/stylesheets/store/theme1/bootstrap-custom.css
+++ b/app/assets/stylesheets/store/theme1/bootstrap-custom.css
@@ -6,6 +6,7 @@
   margin-left: 0px;
 }
 
+
 #footer {
   background-color: $beigeLight;
   padding-top: 15px;
@@ -92,7 +93,7 @@
   -webkit-box-shadow: 0 5px 3px rgba(0, 0, 0, 0.3);
 }
 
-.center-align {
+.align-center {
   text-align: center;
 }
 
