--- a/app/assets/stylesheets/store/variables.css.scss
+++ b/app/assets/stylesheets/store/variables.css.scss
@@ -10,7 +10,7 @@ $grayDarker: #222;
 $grayDark: #333333;
 $gray: #B3AA9F;
 $grayLight: #CCCCCC;
-$grayLighter: #eee;
+$grayLighter: #f5f5f5;
 $white: #fff;
 $blue: #049cdb;
 $blueDark: #0064cd;
@@ -29,15 +29,14 @@ $beigeLight: #EFEBE1;
 
 // Brand Colors
 $mainBrandColor: #95c04c;
-$secondBrandColor: #5a732e;
-$thirdBrandColor: #bf9d4d;
+$secondBrandColor: #d6dcc9;
+$thirdBrandColor: #726638;
 $callToActionColor: #735e2e;
 
-
 // Scaffolding
-$bodyBackground: $white;
-$textColor: $grayDark;
-$linkColor: $mainBrandColor;
+$bodyBackground: $secondBrandColor;
+$textColor: $grayDarker;
+$linkColor: $thirdBrandColor;
 $linkColorLighter: lighten($linkColor, 25%);
 $linkColorHover: darken($linkColor, 15%);
 $baseBorderRadius: 6px;
@@ -49,7 +48,7 @@ $borderRadiusSmall: 3px;
 $sansFontFamily: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $serifFontFamily: Georgia, 'Times New Roman', Times, serif;
 $monoFontFamily: Monaco, Menlo, Consolas, 'Courier New', monospace;
-$baseFontSize: 16px;
+$baseFontSize: 14px;
 $baseFontFamily: $sansFontFamily;
 $baseLineHeight: 20px;
 $altFontFamily: $serifFontFamily;
