--- a/app/views/spree/home/_top_promo.html.erb
+++ b/app/views/spree/home/_top_promo.html.erb
@@ -1,37 +1,40 @@
 <% if @home_page_sliders %>
-<div class="top-promo">
-	<div class="container" >
-		<div class="row">
-			<div id="home-slider" class="carousel top-promo-slider " style="margin-top: -20px;">
-				<div class="carousel-inner">
-					<% @home_page_sliders.each_with_index do |slider, i| %>
-					<div class="<%= i == 0 ? 'active' : '' %> item">
-						<%= slider.html.html_safe %>
-					</div>
-					<% end %>
+<div class="span16">
+	<div class="top-promo">
+		<div id="home-slider" class="carousel top-promo-slider">
+			<div class="carousel-inner">
+				<% @home_page_sliders.each_with_index do |slider, i| %>
+				<div class="<%= i == 0 ? 'active' : '' %> item">
+					<%= slider.html.html_safe %>
 				</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
-</div>
 
-<div class="bottom-promo">
-	<div class="container">
-		<div class="row">
-			<div class="span4 center-align">
-				<img src="https://s3.amazonaws.com/uniqteas/images/ads/promo-01.jpg">
-				<br />
-				Honey Tea Recipes
+	<div class="bottom-promo row">
+		<div class="span4 relative margin-bottom">
+			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-01.jpg">
+			<div class="bottom-promo-text">
+				Check out these great iced teas!
 			</div>
-			<div class="span3 center-align">
-				<img src="https://s3.amazonaws.com/uniqteas/images/ads/promo-02.jpg">
-				<br />
-				Amazing Iced Teas
+		</div>
+		<div class="span4 relative margin-bottom">
+			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-02.jpg">
+			<div class="bottom-promo-text">
+				Teas that are great for your next cocktail.
 			</div>
-			<div class="span4 center-align">
-				<img src="https://s3.amazonaws.com/uniqteas/images/ads/promo-03.jpg">
-				<br />
-				Mint Tea on a Hot Day
+		</div>
+		<div class="span4 relative margin-bottom">
+			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-03.jpg">
+			<div class="bottom-promo-text">
+				Cool iced matcha recipes.
+			</div>
+		</div>
+		<div class="span4 relative margin-bottom">
+			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-03.jpg">
+			<div class="bottom-promo-text">
+				Cool iced matcha recipes.
 			</div>
 		</div>
 	</div>
