--- a/app/assets/stylesheets/store/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom.css.scss
@@ -129,13 +129,16 @@
 }
 
 .margin-top {
-	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 .margin-bottom {
 	margin-bottom: 10px;
 }
 
+.padded {
+	padding: 10px;
+}
 .main_wrapper {
   margin-bottom: 5px;
   padding: 0em 0 1em 0;
