--- a/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
+++ b/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
@@ -1,7 +1,8 @@
 @import './variables';
-@import "store/spree_bootstrap_mixins";
 @import "store/bootstrap";
 // @import "store/bootstrap-responsive";
+@import "store/spree_bootstrap_mixins";
 @import "store/spree_overrides";
 @import "store/bootstrap-custom";
+@import "store/wizard";
 
