--- a/app/views/spree/admin/home_page_sliders/_form.html.erb
+++ b/app/views/spree/admin/home_page_sliders/_form.html.erb
@@ -4,6 +4,11 @@
     <%= error_message_on :home_page_slider, :name, :class => 'fullwidth title' %>
     <%= text_field :home_page_slider, :name %>
   <% end %>
+  <%= f.field_container :location do %>
+    <%= f.label :location, t(:location) %> <span class="required">*</span><br />
+    <%= error_message_on :home_page_slider, :location, :class => 'fullwidth title' %>
+    <%= select :home_page_slider, :location, [['Top-Promo','top'], ['Bottom-Promo','bottom']]%>
+  <% end %>
   <%= f.field_container :html do %>
     <%= f.label :html, t(:html) %> <span class="required">*</span><br />
     <%= error_message_on :home_page_slider, :html, :class => 'fullwidth title' %>
