--- a/app/views/spree/home/_top_promo.html.erb
+++ b/app/views/spree/home/_top_promo.html.erb
@@ -1,9 +1,9 @@
-<% if @home_page_sliders %>
+<% if @top_promo != nil and @top_promo.any? %>
 <div class="span16">
 	<div class="top-promo">
 		<div id="home-slider" class="carousel top-promo-slider">
 			<div class="carousel-inner">
-				<% @home_page_sliders.each_with_index do |slider, i| %>
+				<% @top_promo.each_with_index do |slider, i| %>
 				<div class="<%= i == 0 ? 'active' : '' %> item">
 					<%= slider.html.html_safe %>
 				</div>
@@ -11,33 +11,15 @@
 			</div>
 		</div>
 	</div>
-
+</div>
+<% end %>
+<% if @bottom_promo != nil and @bottom_promo.any? %>
+<div class="span16">
+	<% @bottom_promo.each do |promo| %>
 	<div class="bottom-promo row">
-		<div class="span4 relative margin-bottom">
-			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-01.jpg">
-			<div class="bottom-promo-text">
-				Check out these great iced teas!
-			</div>
-		</div>
-		<div class="span4 relative margin-bottom">
-			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-02.jpg">
-			<div class="bottom-promo-text">
-				Teas that are great for your next cocktail.
-			</div>
-		</div>
-		<div class="span4 relative margin-bottom">
-			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-03.jpg">
-			<div class="bottom-promo-text">
-				Cool iced matcha recipes.
-			</div>
-		</div>
-		<div class="span4 relative margin-bottom">
-			<img style="width:100%;" src="https://s3.amazonaws.com/uniqteas/images/ads/promo-03.jpg">
-			<div class="bottom-promo-text">
-				Cool iced matcha recipes.
-			</div>
-		</div>
+		<%= promo.html.html_safe %>
 	</div>
+	<% end %>
 </div>
 <% end %>
 
