--- a/app/assets/stylesheets/store/_spree_bootstrap_mixins.css.scss
+++ b/app/assets/stylesheets/store/_spree_bootstrap_mixins.css.scss
@@ -93,6 +93,21 @@ input[type="submit"] {
 .container .offset-by-fourteen              { @extend .offset14 }
 .container .offset-by-fifteen               { @extend .offset15 }    
 
+.span33 { 
+  width: 310px;
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  .span33 { width: 250.66px; }
+}
+
+@media (min-width: 1200px) {
+  .span33 { width: 385px; }
+}
+
+@media (max-width: 767px) {
+  .span33 { width: 100%; }
+}
 //thumbnails
 .tmb-all {
   @extend .thumbnail;
