--- a/app/views/spree/admin/home_page_sliders/index.html.erb
+++ b/app/views/spree/admin/home_page_sliders/index.html.erb
@@ -1,12 +1,12 @@
 <%= render :partial => 'spree/admin/shared/web_contents_menu' %>
 
 <% content_for :page_title do %>
-  <%= t(:home_page_slider) %>
+  <%= t(:promos) %>
 <% end %>
 
 <% content_for :page_actions do %>
   <li>
-    <%= button_link_to t(:new_home_page_slider), spree.new_admin_home_page_slider_url, :icon => 'icon-plus', :id => 'new_admin_home_page_slider_link' %></p>
+    <%= button_link_to t(:new_promo), spree.new_admin_home_page_slider_url, :icon => 'icon-plus', :id => 'new_admin_home_page_slider_link' %></p>
   </li>
 <% end %>
 
