--- a/app/views/spree/admin/sweepstakes/edit.html.erb
+++ b/app/views/spree/admin/sweepstakes/edit.html.erb
@@ -1,14 +1,14 @@
 <%= render :partial => 'spree/admin/shared/web_contents_menu' %>
 <% content_for :page_title do %>
-<%= t(:edit) + ' ' + @home_page_slider.name %>
+<%= t(:edit) + ' ' + @sweepstake.name %>
 <% end %>
 <% content_for :page_actions do %>
 <li>
-	<%= button_link_to t(:back_to_promos_list), spree.admin_home_page_sliders_path, :icon => 'icon-arrow-left' %>
+	<%= button_link_to t(:back_to_sweepstakes_list), spree.admin_sweepstakes_path, :icon => 'icon-arrow-left' %>
 </li>
 <% end %>
 
-<%= form_for [:admin, @home_page_slider], :method => :put, :html => { :multipart => true } do |f| %>
+<%= form_for [:admin, @sweepstake], :method => :put, :html => { :multipart => true } do |f| %>
 
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= render :partial => 'spree/admin/shared/edit_resource_links' %>
