--- a/app/assets/stylesheets/store/variables.css.scss
+++ b/app/assets/stylesheets/store/variables.css.scss
@@ -26,6 +26,7 @@ $darkGreen: #5A732E;
 $beige: #BF9D4D;
 $beigeDark: #735E2E;
 $beigeLight: #EFEBE1;
+$brownMedium: #b77919;
 
 // Brand Colors
 $mainBrandColor: #95c04c;
