--- a/app/assets/stylesheets/store/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom.css.scss
@@ -56,11 +56,17 @@ background-image: none;
 }
 
 .top-bar {
-@extend .row;
 padding: 10px 0px 10px 0px;
-color: $grayDarker;
+color: white;
 font-size: 1.4em;
-background-color: white;
+  background-color: $brownMedium;
+  // background-image: -moz-linear-gradient(top, $beigeDark, $brownMedium);
+  // background-image: -webkit-gradient(linear, 0 0, 0 100%, from($beigeDark), to($brownMedium));
+  // background-image: -webkit-linear-gradient(top, $beigeDark, $brownMedium);
+  // background-image: -o-linear-gradient(top, $beigeDark, $brownMedium);
+  // background-image: linear-gradient(to bottom, $beigeDark, $brownMedium);
+  // background-repeat: repeat-x;
+  // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$beigeDark  ', endColorstr='$brownMedium', GradientType=0);
 }
 
 .top-bar a {
@@ -71,27 +77,45 @@ background-color: white;
 }
 }
 
-.top-bar-right, .top-bar-left {
+.top-bar-right, .top-bar-center, .top-bar-left {
 	display: block;
 }
 
+.top-bar-left{
+  text-align: left;
+}
+
+.top-bar-center{
+  text-align: center;
+}
+
+.top-bar-right{
+  text-align: right;
+}
+
 @media (max-width: 800px) {
-	.top-bar-right {
-		display: none;
-	}
 	.top-bar {
 		font-size: 1.2em;
 	}
+	.top-bar-right{
+    display: none;
+	} 
+	.top-bar-center, .top-bar-left {
+    text-align: left;
+    padding-left: 15px;
+  }
+
 }
 
-@media (max-width: 480px) {
-	.top-bar-right {
-		display: none;
-	}
-	.top-bar {
-		display: none;
-	}
-}
+// @media (max-width: 480px) {
+	// .top-bar-right {
+		// display: none;
+	// }
+	// .top-bar {
+		// display: none;
+	// }
+// }
+
 .top-promo {
 	margin: 30px 0px 10px 0px;
 }
@@ -199,4 +223,168 @@ label.error {
     color: red;
     padding: 2px 8px;
     margin-top: 2px;
+}
+
+#emailModal {
+    width: 800px;
+    height: 500px;
+    left: auto;
+}
+.email-signup {
+    background: url(email-signup.png) center center no-repeat;
+    background-size: 800px 500px;
+}
+
+#emailModelBody .mc-field-group {
+  position: absolute;
+  top: 84%;
+  left: 10%;
+  border: none;
+  width: 45%;
+  height: 12%;
+}
+#emailModelBody .mc-field-group  input{
+  border: none;
+  width: 100%;
+  height: 100%;
+  font-size: 1.2em;
+}
+
+#emailModelBody #mc-embedded-subscribe {
+  position: absolute;
+  left: 75%;
+  top: 87%;
+  background: none;
+  border: none;
+  box-shadow: none;
+  font-size: 1.8em;  
+}
+#emailModal .modal-header, #emailModal .modal-body {
+  background: none;
+  border: none;
+  box-shadow: none;
+}
+#emailModal .modal-footer {
+  background: none;
+  border: none;
+  text-align: center;
+  box-shadow: none;
+}
+#emailModelBody{
+  position: relative; 
+  height: 80%
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  #emailModal {
+      width: 750px;
+      height: 469px;
+  }
+  .email-signup {
+      background: url(email-signup.png) center center no-repeat;
+      background-size: 750px 469px;
+  }
+  #emailModelBody{
+    position: relative; 
+    height: 80%
+  }
+  #emailModelBody .mc-field-group {
+    position: absolute;
+    top: 84%;
+    left: 10%;
+    border: none;
+    width: 45%;
+    height: 11%;
+  }
+  #emailModelBody .mc-field-group  input{
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 1.2em;
+  }
+  
+  #emailModelBody #mc-embedded-subscribe {
+    position: absolute;
+    left: 75%;
+    top: 86%;
+    background: none;
+    border: none;
+    box-shadow: none;
+    font-size: 1.7em;  
+  }  
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  #emailModal {
+      width: 450px;
+      height: 281px;
+  }
+  .email-signup {
+      background: url(email-signup.png) center center no-repeat;
+      background-size: 450px 281px;
+  }
+  #emailModelBody{
+    position: relative; 
+    height: 80%
+  }
+  #emailModelBody .mc-field-group {
+    position: absolute;
+    top: 76%;
+    left: 10%;
+    border: none;
+    width: 45%;
+    height: 11%;
+  }
+  #emailModelBody .mc-field-group  input{
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 1em;
+  }
+  
+  #emailModelBody #mc-embedded-subscribe {
+    position: absolute;
+    left: 75%;
+    top: 78%;
+    background: none;
+    border: none;
+    box-shadow: none;
+    font-size: 1.2em;  
+  }  
+}
+@media (max-width: 480px) {
+  #emailModal {
+      width: 450px;
+      height: 281px;
+  }
+  .email-signup {
+      background: url(email-signup.png) center center no-repeat;
+      background-size: 450px 281px;
+  }  
+  #emailModelBody{
+    position: relative; 
+    height: 80%
+  }
+  #emailModelBody .mc-field-group {
+    position: absolute;
+    top: 76%;
+    left: 10%;
+    border: none;
+    width: 45%;
+    height: 11%;
+  }
+  #emailModelBody .mc-field-group  input{
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 1em;
+  }  
+  #emailModelBody #mc-embedded-subscribe {
+    position: absolute;
+    left: 75%;
+    top: 78%;
+    background: none;
+    border: none;
+    box-shadow: none;
+    font-size: 1.2em;  
+  } 
 }
