--- a/app/views/spree/products/_variants.html.erb
+++ b/app/views/spree/products/_variants.html.erb
@@ -1,9 +1,9 @@
 <% if @product.has_variants? %>
 <div id="product-variants">
 	<% @product.grouped_option_values.each do |type, values| %>
-	<h2 class="variant-option-type"><%= type.presentation %></h2>
+	<h4 class="variant-option-type"><%= type.presentation %></h4>
 
-	<div class="variants-buttons ui-buttonset btn-group" data-toggle="buttons-radio">
+	<div class="" data-toggle="buttons-radio">
 		<% has_checked = false
 		values.sort_by(&:position).each do |value| %>
 		<% unless (variants = @product.variants_for_option_value(value)).empty? %>
@@ -12,11 +12,17 @@
 		checked = !has_checked && (v.in_stock || Spree::Config[:allow_backorders])
 		price = v.price_in(current_currency).display_price
 		has_checked = true if checked %>
-		<%= radio_button_tag "products[#{@product.id}]", v.id, checked, :class => "hidden", :disabled => !v.in_stock && !Spree::Config[:allow_backorders], 'data-price' => v.price_in(current_currency).display_price %>
-		<button type="button" data-toggle-name="<%= 'products_' + @product.id.to_s + "_"+v.id.to_s %>" class="btn btn-primary" name="products[<%= @product.id%>]" data-price="<%= price%>">
-			<%= value.presentation %>
-		</button>
-
+		<div class="variant-options">
+			<div class="variant-description">
+				<%= value.presentation %>
+			</div>
+			<div class="variant-price">
+				<%= price %>
+			</div>
+			<div class="variant-quantity">
+				<%= number_field_tag "variants[#{v.id}]" , 0, :class => 'title', :in => 0..@product.on_hand, :min => 0 %>
+			</div>
+		</div>
 		<% end %>
 		<% end %>
 		<% end %>
@@ -25,23 +31,16 @@
 	<input type="hidden" name="is_private" value="0" />
 </div>
 <script type="text/javascript">
-	$(function() {
-		$('div.btn-group[data-toggle-name]').each(function() {
-			var group = $(this);
-			var form = group.parents('form').eq(0);
-			var name = group.attr('data-toggle-name');
-			var hidden = $('input[name="' + name + '"]', form);
-			$('button', group).each(function() {
-				var button = $(this);
-				button.live('click', function() {
-					hidden.val($(this).prop('checked',true));
-				});
-				if (button.val() == hidden.val()) {
-					button.addClass('active');
-				}
-			});
-		});
-	}); 
-</script>
+		$(function() {
+	$('button[data-toggle-name]').each(function() {
+	var button = $(this);
+	var form = button.parents('form').eq(0);
+	var name = button.attr('data-toggle-name');
+	var hidden = $('#' + name, form);
+	button.click(function() {
+	hidden.prop("checked", "true"checked");
+	});
+	});
+	});</script>
 
 <% end%>
