--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -10,35 +10,36 @@
 				<%= product_description(@product) rescue t(:product_has_no_description) %>
 			</div>
 
+			<%= render :partial => 'reviews' %>
 		</div>
 	</div>
-	<div class="span7" data-hook="product_center_part">
-
-		<div id="product-images" data-hook="product_images">
-			<div id="main-image" data-hook>
-				<%= render :partial => 'image' %>
+	<div class="span11" data-hook="product_right_part">
+		<div class="row">
+			<div class="span7">
+				<div id="product-images" data-hook="product_images">
+					<div id="main-image" data-hook>
+						<%= render :partial => 'image' %>
+					</div>
+					<div id="thumbnails" data-hook>
+						<%= render :partial => 'thumbnails' %>
+					</div>
+				</div>
 			</div>
-			<div id="thumbnails" data-hook>
-				<%= render :partial => 'thumbnails' %>
+			<div class="span4">
+
+				<div id="cart-form" data-hook="cart_form">
+					<%= render :partial => 'cart_form' %>
+				</div>
+			</div>
+			<div class="span11">
+				<%= render :partial => 'taxons' %>
+			</div>
+			<div class="span11">
+				<div data-hook="product_properties">
+					<%= render :partial => 'properties' %>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="span4" data-hook="product_right_part">
-
-		<div id="cart-form" data-hook="cart_form">
-			<%= render :partial => 'cart_form' %>
-		</div>
-	</div>
-	<div class="span5">
-		<%= render :partial => 'reviews' %>
-	</div>
-	<div class="span11">
-		<%= render :partial => 'taxons' %>
-	</div>
-	<div class="span11">
-		<div data-hook="product_properties">
-			<%= render :partial => 'properties' %>
-		</div>
-	</div>
 </div>
