fix for coupon code field

--- a/app/assets/stylesheets/store/spree_overrides.css.scss
+++ b/app/assets/stylesheets/store/spree_overrides.css.scss
@@ -253,7 +253,7 @@ form#new_product, form.edit_product {
 }
 
 .single_rating.rate {
-  width: 180px;
+  width: 100%;
 }
 
 .review .single_rating, .review .average {
