--- a/app/views/spree/shared/_taxon_header.html.erb
+++ b/app/views/spree/shared/_taxon_header.html.erb
@@ -1,5 +1,5 @@
 <% content_for :subheader do %>
 <div class='category-header'>
-	<img src="/assets/store/category-headers/categories-<%= @taxon.permalink.split("/").second %>.jpg" alt="<%= @taxon.name %>" width="100%" %>
+	<img src="https://s3.amazonaws.com/uniqteas/images/categories/categories-<%= @taxon.permalink.split("/").second %>.jpg" alt="<%= @taxon.name %>" width="100%" %>
 </div>
 <% end %>
