--- a/app/assets/stylesheets/store/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom.css.scss
@@ -30,29 +30,46 @@
 }
 
 #subheader {
-	overflow: hidden;.subheader-wrapper {
-	overflow: hidden;h1 {
-	border-bottom: 1px solid $grayLight;
-	clear: both;
-	font-size: 34px;
-	font-weight: 300;
-}
-}
-}
-
-.catbar-inner {
-@extend .navbar-inner;
-margin-top: -20px;
-min-height: 20px;
-background-color: white;
-background-image: none;
+	overflow: hidden;
+  clear: both;
+	.subheader-wrapper {
+  	overflow: hidden;
+    	h1 {
+    	border-bottom: 1px solid $grayLight;
+    	clear: both;
+    	font-size: 34px;
+    	font-weight: 300;
+    }
+  }
 }
 
-.navbar .catbar-inner .nav > li > a {
-	color: $textColor;
-	&:hover {
-	color: $linkColor;
+.catnavbar-inner {
+  min-height: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #fafafa;
+  background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
+  border: 1px solid #d4d4d4;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  *zoom: 1;
 }
+
+@media (min-width: 980px) and (max-width: 1199px){
+  .navbar .nav > li > a {
+    padding: 10px 8px 10px;
+    font-size: 14px;
+  }
 }
 
 .top-bar {
