--- a/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
+++ b/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
@@ -4,5 +4,6 @@
 @import "store/spree_bootstrap_mixins";
 @import "store/spree_overrides";
 @import "store/bootstrap-custom";
+@import "store/bootstrap-custom2";
 @import "store/wizard";
 
