--- a/app/views/spree/admin/home_page_sliders/_list.html.erb
+++ b/app/views/spree/admin/home_page_sliders/_list.html.erb
@@ -4,7 +4,7 @@
     <col style="width: 15%">
   <thead>
     <tr data-hook="home_page_slider_header">
-      <th><%= t(:name) %></th>
+      <th><%= Spree.t(:name) %></th>
       <th class="actions"></th>
     </tr>
   </thead>
