--- a/app/views/spree/products/_image.html.erb
+++ b/app/views/spree/products/_image.html.erb
@@ -1,4 +1,4 @@
-<% if image %> 
+<% if defined?(image) && image %> 
   <%= image_tag image.attachment.url(:large), :itemprop => "image" %>
 <% else %>
   <%= large_image(@product, :itemprop => "image") %>
