--- a/app/assets/stylesheets/store/bootstrap.css.scss
+++ b/app/assets/stylesheets/store/bootstrap.css.scss
@@ -3737,7 +3737,6 @@ input[type="submit"].btn.btn-mini {
   color: $linkColor;
   text-decoration: none;
   font-weight: bold;
-  font-size: 17px;
 }
 .navbar .nav .dropdown-toggle .caret {
   margin-top: 8px;
@@ -4270,12 +4269,27 @@ input[type="submit"].btn.btn-mini {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
+
+.thumbnail:hover,
+.thumbnail:focus {
+  border-color: #0088cc;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+  -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+  box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+}
+a .thumbnail {
+  color: $textColor;
+}
+a .thumbnail:hover,
+a .thumbnail:focus,
 a.thumbnail:hover,
 a.thumbnail:focus {
   border-color: #0088cc;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+  text-decoration: none;
+  color: $linkColor;
 }
 .thumbnail > img {
   display: block;
