--- a/app/views/spree/admin/home_page_sliders/new.html.erb
+++ b/app/views/spree/admin/home_page_sliders/new.html.erb
@@ -1,12 +1,12 @@
 <%= render :partial => 'spree/admin/shared/web_contents_menu' %>
 
 <% content_for :page_title do %>
-  <%= t(:promos) %>
+  <%= Spree.t(:promos) %>
 <% end %>
 
 <% content_for :page_actions do %>
   <li>
-    <%= button_link_to t(:back_to_promos_list), spree.admin_home_page_sliders_path, :icon => 'icon-arrow-left' %>
+    <%= button_link_to Spree.t(:back_to_promos_list), spree.admin_home_page_sliders_path, :icon => 'icon-arrow-left' %>
   </li>
 <% end %>
 
@@ -16,7 +16,7 @@
   <fieldset class="no-border-top">
     <br>
     <div class="filter-actions actions" data-hook="buttons">
-      <%= button t(:create), 'icon-ok' %>
+      <%= button Spree.t(:create), 'icon-ok' %>
     </div>
   </fieldset>
 <% end %>
