--- a/app/views/spree/admin/pages/index.html.erb
+++ b/app/views/spree/admin/pages/index.html.erb
@@ -1,12 +1,12 @@
 <%= render :partial => 'spree/admin/shared/web_contents_menu' %>
 
 <% content_for :page_title do %>
-  <%= t(:page) %>
+  <%= Spree.t(:page) %>
 <% end %>
 
 <% content_for :page_actions do %>
   <li>
-    <%= button_link_to t(:new_page), spree.new_admin_page_url, :icon => 'icon-plus', :id => 'new_admin_page_link' %></p>
+    <%= button_link_to Spree.t(:new_page), spree.new_admin_page_url, :icon => 'icon-plus', :id => 'new_admin_page_link' %></p>
   </li>
 <% end %>
 
