--- a/app/views/spree/admin/sweepstakes/edit.html.erb
+++ b/app/views/spree/admin/sweepstakes/edit.html.erb
@@ -1,10 +1,10 @@
 <%= render :partial => 'spree/admin/shared/web_contents_menu' %>
 <% content_for :page_title do %>
-<%= t(:edit) + ' ' + @sweepstake.name %>
+<%= Spree.t(:edit) + ' ' + @sweepstake.name %>
 <% end %>
 <% content_for :page_actions do %>
 <li>
-	<%= button_link_to t(:back_to_sweepstakes_list), spree.admin_sweepstakes_path, :icon => 'icon-arrow-left' %>
+	<%= button_link_to Spree.t(:back_to_sweepstakes_list), spree.admin_sweepstakes_path, :icon => 'icon-arrow-left' %>
 </li>
 <% end %>
 
