--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -7,7 +7,7 @@
 			<h1 class="product-title" itemprop="name"><%= accurate_title %></h1>
 
 			<div itemprop="description" data-hook="description">
-				<%= product_description(@product) rescue t(:product_has_no_description) %>
+				<%= product_description(@product) rescue Spree.t(:product_has_no_description) %>
 			</div>
 
 			<%= render :partial => 'reviews' %>
@@ -32,12 +32,12 @@
 				</div>
 			</div>
 			<div class="span11">
-				<%= render :partial => 'taxons' %>
-			</div>
-			<div class="span11">
 				<div data-hook="product_properties">
 					<%= render :partial => 'properties' %>
 				</div>
+			</div>
+			<div class="span11">
+				<%= render :partial => 'taxons' %>
 			</div>
 		</div>
 	</div>
