--- a/app/views/spree/shared/_user_form.html.erb
+++ b/app/views/spree/shared/_user_form.html.erb
@@ -1,7 +1,7 @@
 	<fieldset>
 		<div class="control-group">
 			<!-- Username -->
-			<%= f.label :email, t(:email), :class => "control-label", "for" => "spree_user_email" %>
+			<%= f.label :email, Spree.t(:email), :class => "control-label", "for" => "spree_user_email" %>
 			<div class="controls">
 				<%= f.email_field :email, :class => 'input-xlarge', "placeholder" => "email" %>
 			</div>
@@ -9,7 +9,7 @@
 
 		<div class="control-group">
 			<!-- Password-->
-			<%= f.label :password, t(:password), :class => "control-label", "for" => "spree_user_password" %>
+			<%= f.label :password, Spree.t(:password), :class => "control-label", "for" => "spree_user_password" %>
 			<div class="controls">
     			<%= f.password_field :password, :class => 'input-xlarge', "placeholder" => "password" %>
 			</div>
@@ -17,7 +17,7 @@
 
 		<div class="control-group">
 			<!-- Password-->
-			<%= f.label :password_confirmation, t(:confirm_password), :class => "control-label", "for" => "spree_user_password_confirmation" %>
+			<%= f.label :password_confirmation, Spree.t(:confirm_password), :class => "control-label", "for" => "spree_user_password_confirmation" %>
 			<div class="controls">
     			<%= f.password_field :password_confirmation, :class => 'input-xlarge', "placeholder" => "confirm password" %>
 			</div>
