--- a/app/views/spree/pages/show.html.erb
+++ b/app/views/spree/pages/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :subheader do %> <h1 style="border-bottom: 1px solid #ccc; margin-bottom: 20px;">
 	<%= @page.name %></h1>
 <% end %>
-<div class="row">
+<div class="row margin-top">
 	<%= @page.html.html_safe %>
 </div>
