--- a/app/assets/stylesheets/store/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom.css.scss
@@ -134,6 +134,7 @@ font-size: 1.4em;
 
 .top-promo {
 	margin: 30px 0px 10px 0px;
+	min-height: 524px;
 }
 
 .category-header {
@@ -148,6 +149,8 @@ font-size: 1.4em;
 
 .top-promo-slider {@extend .container;
 	background-color: white;
+	width: 100%;
+	height: 524px;
 }
 .relative {
 	position: relative;
@@ -157,6 +160,7 @@ font-size: 1.4em;
 	margin-bottom: 5px;
 	padding: 0em 0 1em 0;
 	background-color: white;
+	height: 303px;
 }
 
 .bottom-promo-text {
@@ -221,6 +225,8 @@ font-size: 1.4em;
 	border-top-right-radius: 1em;
 	border-bottom-right-radius: 0em;
 	border-bottom-left-radius: 0em;
+  width: 100%;
+  height: 100%;
 }
 
 dl dd {
