--- a/app/assets/stylesheets/store/bootstrap-custom2.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom2.css.scss
@@ -1,4 +1,4 @@
-body {
+.body-class {
   background-color: #fff;
 }
 
@@ -33,3 +33,38 @@ body {
   font-weight: normal;
 }
 
+.ut2-top-promo-slider {
+  background-color: white;
+  width: 100%;
+  height: 60%;
+  overflow-y: hidden;
+  margin: 0px;
+}
+
+.ut2-carousel-inner {
+  border-top-left-radius: 0em;
+  border-top-right-radius: 0em;
+  border-bottom-right-radius: 0em;
+  border-bottom-left-radius: 0em;  
+  width: 100%;
+  height: 100%;
+}
+
+.item {
+  width: 100%;
+  height: 100%;
+}
+
+.ut2-carousel-item-image {
+  text-align: center; 
+  vertical-align: middle; 
+  background-position: center bottom;
+  height: 100%;
+  width: 100%;
+  background-size: 100% auto;  
+}
+
+.ut2-category-header {
+  margin: 0px 0px 10px 0px;
+  overflow: hidden;
+}
