fixed mobile nav

--- a/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
+++ b/app/assets/stylesheets/store/spree_uniqteas_theme.css.scss
@@ -5,5 +5,6 @@
 @import "store/spree_overrides";
 @import "store/bootstrap-custom";
 @import "store/bootstrap-custom2";
+@import "store/bootstrap-mobile-nav";
 @import "store/wizard";
 
