--- a/app/assets/stylesheets/store/bootstrap-custom2.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom2.css.scss
@@ -1,5 +1,7 @@
 .body-class {
   background-color: #fff;
+  width: 100%;
+  height: 100%;
 }
 
 .navbar-inner {
@@ -56,6 +58,9 @@
   }
 }
 @media (max-width: 767px) {
+  body {
+    padding: 0px;
+  }  
   .ut2-top-promo {
     width: 100%; 
     height: 400px; 
@@ -95,4 +100,26 @@
 .ut2-category-header {
   margin: 0px 0px 10px 0px;
   overflow: hidden;
+}
+
+.ut2-logo-navbar {
+  width: 45px;
+  height: 45px;
+  display: block;
+  float: left;
+}
+
+.ut2-signup-navbar {
+  display: none;
+  float: left;
+  margin-left: 20px;
+}
+@media (max-width: 979px) {
+  .ut2-logo-navbar {
+    width: 35px;
+    height: 35px;
+  }
+  .ut2-signup-navbar {
+    display: block;
+  }
 }
