--- a/app/assets/stylesheets/store/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom.css.scss
@@ -308,22 +308,19 @@ label.error {
     padding: 2px 8px;
     margin-top: 2px;
 }
-
-#emailModal {
+.email-signup {
     width: 800px;
     height: 500px;
     left: auto;
-}
-.email-signup {
     background: url(email-signup.png) center center no-repeat;
     background-size: 800px 500px;
 }
 
-#emailModelBody {
+.modal-body {
   overflow-y: hidden;
 }
 
-#emailModelBody .mc-field-group {
+.modal-body .mc-field-group {
   position: absolute;
   top: 84%;
   left: 10%;
@@ -331,14 +328,14 @@ label.error {
   width: 45%;
   height: 12%;
 }
-#emailModelBody .mc-field-group  input{
+.modal-body .mc-field-group  input{
   border: none;
   width: 100%;
   height: 100%;
   font-size: 1.2em;
 }
 
-#emailModelBody #mc-embedded-subscribe {
+.modal-body #mc-embedded-subscribe {
   position: absolute;
   left: 76%;
   top: 85%;
@@ -347,23 +344,23 @@ label.error {
   box-shadow: none;
   font-size: 1.8em;  
 }
-#emailModal .modal-header, #emailModal .modal-body {
+.email-signup .modal-header, .email-signup .modal-body {
   background: none;
   border: none;
   box-shadow: none;
 }
-#emailModal .modal-footer {
+.email-signup .modal-footer {
   background: none;
   border: none;
   text-align: center;
   box-shadow: none;
 }
-#emailModelBody{
+.modal-body{
   position: relative; 
   height: 80%
 }
 @media (min-width: 768px) and (max-width: 979px) {
-  #emailModal {
+  .email-signup {
       width: 750px;
       height: 469px;
   }
@@ -371,11 +368,11 @@ label.error {
       background: url(email-signup.png) center center no-repeat;
       background-size: 750px 469px;
   }
-  #emailModelBody{
+  .modal-body{
     position: relative; 
     height: 80%
   }
-  #emailModelBody .mc-field-group {
+  .modal-body .mc-field-group {
     position: absolute;
     top: 84%;
     left: 10%;
@@ -383,14 +380,14 @@ label.error {
     width: 45%;
     height: 11%;
   }
-  #emailModelBody .mc-field-group  input{
+  .modal-body .mc-field-group  input{
     border: none;
     width: 100%;
     height: 100%;
     font-size: 1.2em;
   }
   
-  #emailModelBody #mc-embedded-subscribe {
+  .modal-body #mc-embedded-subscribe {
     position: absolute;
     left: 76%;
     top: 85%;
@@ -402,7 +399,7 @@ label.error {
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-  #emailModal {
+  .email-signup {
       width: 450px;
       height: 281px;
   }
@@ -410,11 +407,11 @@ label.error {
       background: url(email-signup.png) center center no-repeat;
       background-size: 450px 281px;
   }
-  #emailModelBody{
+  .modal-body{
     position: relative; 
     height: 80%
   }
-  #emailModelBody .mc-field-group {
+  .modal-body .mc-field-group {
     position: absolute;
     top: 76%;
     left: 10%;
@@ -422,14 +419,14 @@ label.error {
     width: 45%;
     height: 11%;
   }
-  #emailModelBody .mc-field-group  input{
+  .modal-body .mc-field-group  input{
     border: none;
     width: 100%;
     height: 100%;
     font-size: 1em;
   }
   
-  #emailModelBody #mc-embedded-subscribe {
+  .modal-body #mc-embedded-subscribe {
     position: absolute;
     left: 75%;
     top: 78%;
@@ -440,7 +437,7 @@ label.error {
   }  
 }
 @media (max-width: 480px) {
-  #emailModal {
+  .email-signup {
       width: 450px;
       height: 281px;
   }
@@ -448,11 +445,11 @@ label.error {
       background: url(email-signup.png) center center no-repeat;
       background-size: 450px 281px;
   }  
-  #emailModelBody{
+  .modal-body{
     position: relative; 
     height: 80%
   }
-  #emailModelBody .mc-field-group {
+  .modal-body .mc-field-group {
     position: absolute;
     top: 76%;
     left: 10%;
@@ -460,13 +457,13 @@ label.error {
     width: 45%;
     height: 11%;
   }
-  #emailModelBody .mc-field-group  input{
+  .modal-body .mc-field-group  input{
     border: none;
     width: 100%;
     height: 100%;
     font-size: 1em;
   }  
-  #emailModelBody #mc-embedded-subscribe {
+  .modal-body #mc-embedded-subscribe {
     position: absolute;
     left: 75%;
     top: 78%;
