--- a/app/assets/stylesheets/store/bootstrap-custom2.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom2.css.scss
@@ -34,6 +34,11 @@
 #topbar .navbar .nav > li > a {
   font-weight: normal;
 }
+
+#sidebar {
+  display: block;
+}
+
 @media (min-width: 1400px) {
   .ut2-top-promo {
     width: 100%; 
@@ -56,6 +61,12 @@
     height: 550px; 
     position: relative;    
   }
+  #sidebar {
+    display: none;
+  }
+  #content {
+    width: 100%;
+  }
 }
 @media (max-width: 767px) {
   body {
@@ -65,6 +76,15 @@
     width: 100%; 
     height: 400px; 
     position: relative;    
+  }
+  #content {
+    width: 100%;
+  }
+  #sidebar {
+    display: none;
+  }
+  #wrapper, #footer {
+    padding: 5px;
   }
 }
 .ut2-top-promo-slider {
@@ -118,6 +138,15 @@
   .ut2-logo-navbar {
     width: 35px;
     height: 35px;
+  }
+  .ut2-signup-navbar {
+    display: block;
+  }
+}
+@media (max-width: 767px) {
+  .ut2-logo-navbar {
+    width: 25px;
+    height: 25px;
   }
   .ut2-signup-navbar {
     display: block;
