--- a/app/views/spree/shared/_mobile_nav.html.erb
+++ b/app/views/spree/shared/_mobile_nav.html.erb
@@ -1,4 +1,10 @@
 <div class="sidemenu-inner">
+	<div style="padding: 5px 0px 10px 10px;width:100%;"><%= link_to_cart %></div>
+	<%= link_to blendit_url, :class => "btn btn-primary" do %>
+	<%= content_tag(:i, '', :class => 'icon-plus') + " " + t(:make_my_own_blend) %>
+	<% end %>
+	<br />
+	Try it out, you'll love it!
 	<ul class="nav nav-pills nav-stacked">
 		<% if try_spree_current_user and !try_spree_current_user.guest? %>
 		<li>
@@ -19,6 +25,7 @@
 			<%= link_to t(:blog), 'http://teasherpa.wordpress.com/'%>
 		</li>
 		<%= categories_tree_inner(get_category_root, nil, 2, 1, false, false) %>
+		&nbps;<br />
 	</ul>
 </div>
 
