--- a/app/assets/stylesheets/store/bootstrap-custom2.css.scss
+++ b/app/assets/stylesheets/store/bootstrap-custom2.css.scss
@@ -39,6 +39,16 @@
   display: block;
 }
 
+.logo-transparent {
+  position: absolute; 
+  left:12%; 
+  top: 5%; 
+  width: 15%; 
+  height: 6%;
+  background-image: url('/assets/store/uniqteas-transparent.png'); 
+  background-size: 100% 100%;    
+}
+
 @media (min-width: 1400px) {
   .ut2-top-promo {
     width: 100%; 
@@ -68,7 +78,7 @@
     width: 100%;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 541px) and (max-width: 767px) {
   body {
     padding: 0px;
   }  
@@ -76,6 +86,15 @@
     width: 100%; 
     height: 400px; 
     position: relative;    
+  }
+  .logo-transparent {
+    position: absolute; 
+    left:3%; 
+    top: 8%; 
+    width: 20%; 
+    height: 9%;
+    background-image: url('/assets/store/uniqteas-transparent.png'); 
+    background-size: 100% 100%;    
   }
   #content {
     width: 100%;
@@ -87,6 +106,35 @@
     padding: 5px;
   }
 }
+@media (max-width: 540px) {
+  body {
+    padding: 0px;
+  }  
+  .ut2-top-promo {
+    width: 100%; 
+    height: 295px; 
+    position: relative;    
+  }
+  .logo-transparent {
+    position: absolute; 
+    left:3%; 
+    top: 8%; 
+    width: 23%; 
+    height: 10%;
+    background-image: url('/assets/store/uniqteas-transparent.png'); 
+    background-size: 100% 100%;    
+  }
+  #content {
+    width: 100%;
+  }
+  #sidebar {
+    display: none;
+  }
+  #wrapper, #footer {
+    padding: 5px;
+  }
+}
+
 .ut2-top-promo-slider {
   background-color: white;
   width: 100%;
